fix: fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body.index{
 	position: fixed;
 	right:8px;
 	top: 2px;
+	background-color: rgba(220, 237, 200, 0.9);
+	border-radius: 3px;
 }
 
 br{
@@ -87,11 +89,16 @@ a.text-link::after{
 	justify-content: flex-start;
 }
 
-.content{
-	margin: 3%;
-	padding: 1%;
-	min-width: 90vw;
+.container{
+	padding: 0 3%;
+	min-width: 93vw;
 	width: auto;
+}
+
+.content{
+	margin: 3% 0;
+	margin-bottom: auto;
+	padding: 1%;
 	background-color: rgba(220, 237, 200, 0.65);
 	border-radius: 5px;
 	border: 5px dotted #b4d545;
@@ -128,7 +135,10 @@ a.text-link::after{
 .footer{
 	position: fixed;
 	top: 5px;
-	margin:auto;
+	margin: 0 auto;
+	background-color: rgba(220, 237, 200, 0.9);
+	border-radius: 3px;
+	/*right: 50%;*/
 	animation-name: foot-anim;
 	animation-duration: 6s;
 	animation-iteration-count: infinite;
